fix(ui): hide scrollbar when modal is open

--- a/src/components/Event/CreateEventModal/CreateEventModal.module.scss
+++ b/src/components/Event/CreateEventModal/CreateEventModal.module.scss
@@ -2,7 +2,7 @@
 
 .event-modal-container {
   background: $white;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
